[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -17,8 +17,8 @@ perl=5.010001
 Benchmark::Command=0.08
 Benchmark::Dumb=0
 
-;!lint-prereqs assume-used # via command
+;!lint_prereqs assume-used # via command
 DateTime=0
 
-;!lint-prereqs assume-used # via command
+;!lint_prereqs assume-used # via command
 Time::Moment=0
