--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,15 @@ name=App-BenchDateModules
 
 [Prereqs]
 perl=5.010001
+
+; core modules
+
+strict=0
+warnings=0
+Time::Piece=0
+
+; non-core modules
+
 Benchmark::Command=0.08
 Benchmark::Dumb=0
 
